# thonk

./: .gitignore  .gitmodules  LICENSE  README.md  TAURI_SETUP.md
backend/: .env.sample  app.py  pyproject.toml
backend/eeg/: models.py  routes.py
backend/eeg/layers/: bvp_encoder.py  drop_path.py  labram_encoder.py
backend/eeg/layers/labram/: append_class_token.py  base.py  constants.py  kmeans.py  labram_pretrain.py  labram_vqnsp.py  masking_process.py  neural_transformer.py  neural_transformer_attention.py  neural_transformer_block.py  norm_ema_quantizer.py  patch_embed.py  relative_position_bias.py  spatial_temporal_embedding.py  temporal_encoder.py  utils.py  vqnsp.py
backend/eeg/models/classification/: labram.pth
backend/eeg/services/: embedding_service.py  stream_service.py
backend/eeg/services/streaming/: board_manager.py  data_processor.py  session_manager.py  websocket_broadcaster.py
backend/mi/: initialization.py  routes.py
backend/mi/config/: eeg_config.yaml
backend/mi/eeg/: dataset.py
backend/mi/models/trained/: eegnet_best.pth
backend/mi/services/: calibration_manager.py  fine_tuner.py  mi_controller.py  mi_processor.py  stream_service.py
backend/ocular/: controller.py  models.py  routes.py
backend/ocular/services/pupillometry/: pupillometry_service.py
backend/ppg/: controller.py  models.py  routes.py
backend/ppg/services/: ppg_service.py
backend/ppg/services/bpm/: bpm_calculator.py  (+4 more)
backend/shared/: websocket_server.py
backend/shared/config/: app_config.py  logging.py
backend/shared/storage/: __init__.py  hf_store.py
(+54 files in other folders)
